--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "composer/installers": "^2.0",
         "drupal/core-composer-scaffold": "^10.3",
         "drupal/core-project-message": "^10.3",
-        "drupal/core-recommended": "^10.3"
+        "drupal/core-recommended": "^10.3",
+        "drupal/webform": "^6.2",
+        "drush/drush": "^13.0"
     },
     "conflict": {
         "drupal/drupal": "*"
