--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "drupal/core-project-message": "^10.3",
         "drupal/core-recommended": "^10.3",
         "drupal/webform": "^6.2",
+        "drupal/webform_views": "^5.4",
         "drush/drush": "^13.0"
     },
     "conflict": {
