--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,8 @@
         "drupal/geofield": "^1.61",
         "drupal/geofield_map": "^3.0",
         "drupal/jquery_ui": "^1.7",
+        "drupal/jquery_ui_draggable": "^2.1",
+        "drupal/jquery_ui_resizable": "^2.1",
         "drupal/leaflet": "^10.2",
         "drupal/webform": "^6.2",
         "drupal/webform_views": "^5.4",
