--- a/composer.json
+++ b/composer.json
@@ -16,26 +16,27 @@
     ],
     "require": {
         "composer/installers": "^2.0",
-        "dompdf/dompdf": "^3.0",
-        "drupal/address": "^2.0",
-        "drupal/asset_injector": "^2.21",
-        "drupal/bootstrap5": "^4.0",
-        "drupal/core-composer-scaffold": "^10.3",
-        "drupal/core-project-message": "^10.3",
-        "drupal/core-recommended": "^10.3",
-        "drupal/field_group": "^3.6",
-        "drupal/flexible_views": "^2.1",
-        "drupal/geofield": "^1.61",
-        "drupal/geofield_map": "^3.0",
-        "drupal/jquery_ui": "^1.7",
-        "drupal/jquery_ui_draggable": "^2.1",
-        "drupal/jquery_ui_resizable": "^2.1",
-        "drupal/leaflet": "^10.2",
-        "drupal/recaptcha": "^3.4",
-        "drupal/smtp": "^1.4",
-        "drupal/webform": "^6.2",
-        "drupal/webform_views": "^5.4",
-        "drush/drush": "^13.0"
+        "dompdf/dompdf": "3.0.0",
+        "drupal/address": "2.0.2",
+        "drupal/asset_injector": "2.21.0",
+        "drupal/bootstrap5": "4.0.3",
+        "drupal/core-composer-scaffold": "10.3.2",
+        "drupal/core-project-message": "10.3.2",
+        "drupal/core-recommended": "10.3.2",
+        "drupal/field_group": "3.6.0",
+        "drupal/flexible_views": "2.1.1",
+        "drupal/geofield": "1.61.0",
+        "drupal/geofield_map": "3.0.24",
+        "drupal/jquery_ui": "1.7.0",
+        "drupal/jquery_ui_draggable": "2.1.0",
+        "drupal/jquery_ui_resizable": "2.1.0",
+        "drupal/leaflet": "10.2.26",
+        "drupal/recaptcha": "3.4.0",
+        "drupal/smtp": "1.4.0",
+        "drupal/webform": "6.2.7",
+        "drupal/webform_views": "5.4.0",
+        "drupal/webformnavigation": "2.0.1",
+        "drush/drush": "13.0.1"
     },
     "conflict": {
         "drupal/drupal": "*"
