--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,9 @@
         "drupal/address": "2.0.3",
         "drupal/asset_injector": "2.21.0",
         "drupal/bootstrap5": "4.0.3",
-        "drupal/core-composer-scaffold": "10.3.2",
-        "drupal/core-project-message": "10.3.2",
-        "drupal/core-recommended": "10.3.2",
+        "drupal/core-composer-scaffold": "10.4.2",
+        "drupal/core-project-message": "10.4.2",
+        "drupal/core-recommended": "10.4.2",
         "drupal/field_group": "3.6.0",
         "drupal/flexible_views": "2.1.1",
         "drupal/geofield": "1.64.0",
@@ -30,13 +30,15 @@
         "drupal/jquery_ui": "1.7.0",
         "drupal/jquery_ui_draggable": "2.1.0",
         "drupal/jquery_ui_resizable": "2.1.0",
-        "drupal/leaflet": "10.2.35",
+        "drupal/leaflet": "10.2.38",
         "drupal/recaptcha": "3.4.0",
         "drupal/smtp": "1.4.0",
         "drupal/webform": "6.2.9",
         "drupal/webform_views": "5.5.0",
         "drupal/webformnavigation": "2.0.1",
-        "drush/drush": "13.3.3"
+        "drush/drush": "13.3.3",
+        "shuchkin/simplexlsxgen": "1.4.13",
+        "fflch/indicadores": "1.0.2"
     },
     "conflict": {
         "drupal/drupal": "*"
