--- a/composer.json
+++ b/composer.json
@@ -31,14 +31,15 @@
         "drupal/jquery_ui_draggable": "2.1.0",
         "drupal/jquery_ui_resizable": "2.1.0",
         "drupal/leaflet": "10.2.38",
+        "drupal/mask": "^2.1@RC",
         "drupal/recaptcha": "3.4.0",
         "drupal/smtp": "1.4.0",
         "drupal/webform": "6.2.9",
         "drupal/webform_views": "5.5.0",
         "drupal/webformnavigation": "2.0.1",
         "drush/drush": "13.3.3",
-        "shuchkin/simplexlsxgen": "1.4.13",
-        "fflch/indicadores": "1.0.2"
+        "fflch/indicadores": "1.0.2",
+        "shuchkin/simplexlsxgen": "1.4.13"
     },
     "conflict": {
         "drupal/drupal": "*"
